syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package email;

service EmailService {
  rpc SendEmail (SendEmailRequest) returns (SendEmailResponse);
  
  rpc SendRegistrationNotification (RegistrationNotificationRequest) returns (SendEmailResponse);
  
  rpc SendPasswordResetEmail (PasswordResetRequest) returns (SendEmailResponse);
  
  rpc SendChangePasswordNotification (ChangePasswordNotificationRequest) returns (SendEmailResponse);
  
  rpc SendFileEventNotification (FileEventNotificationRequest) returns (SendEmailResponse);
}
message SendEmailRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
  bool isHtml = 4;
  repeated EmailAttachment attachments = 5;
}

message SendEmailResponse {
  bool success = 1;
  string messageId = 2;
  string message = 3;
}

message EmailAttachment {
  string fileName = 1;
  bytes fileData = 2;
  string contentType = 3;
}

message RegistrationNotificationRequest {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  string activationLink = 4;
}

message PasswordResetRequest {
  string email = 1;
  string resetLink = 2;
  string firstName = 3;
}

message ChangePasswordNotificationRequest {
  string email = 1;
  string firstName = 2;
  string deviceInfo = 3;
  string ipAddress = 4;
  string timestamp = 5;
}

message FileEventNotificationRequest {
  string email = 1;
  string firstName = 2;
  string eventType = 3;
  string fileName = 4;
  string fileSize = 5;
  string timestamp = 6;
  string deviceInfo = 7;
  string ipAddress = 8;
} 